# tjk-ml-prediction-pipeline

./: .env.example  .gitignore  README.md  TJKKupon.spec  TJKKupon_Final.spec  TJKKupon_Multi.spec  TJKKupon_v2.spec  analyze_backtest.py  analyze_six_ganyan.py  app_gui.py  autonomous_runner.py  autonomous_runner_v2.py  backtest_walkforward.py  check_result.py  debug_discovery.py  debug_page.html  debug_scrape.py  export_daily_csv.py  generate_adana_sixli.py  log.txt  log_final.txt  log_res.txt  predict_advanced.py  predict_race.py  predict_task.py  prediction_20_12_2025.md  prediction_report.txt  project_status.md  pyproject.toml  repro_bug.py  requirements.txt  reset_db.py  run_scrape.py  scrape_force_today.py  scrape_task.py  test_run.py  view_data.py
outputs/backtest/: sixli_consolidated_report.txt  sixli_start_1_overall.txt  sixli_start_2_overall.txt  sixli_start_3_overall.txt  summary_report.txt
outputs/predictions/: 2025-12-20_adana_sixli_economic.txt  2025-12-20_adana_sixli_start4_economic.txt  2025-12-20_adana_sixli_start4_wide.txt  2025-12-20_adana_sixli_wide.txt  2025-12-21_adana_sixli_start4_economic.txt  2025-12-21_adana_sixli_start4_wide.txt
src/outputs/: summary_metrics.json
src/outputs/sim/: stability_report.md  stability_summary.json  state.json
src/outputs/tickets/: 2025-11-15_ticket.json  2025-11-15_ticket.md  2025-12-19_ticket.json  2025-12-19_ticket.md
src/tjk/: cli.py  config.py  coupon_generator.py
src/tjk/analysis/: calibrator.py  decision_engine.py  history_processor.py  profile.py  surprise.py
src/tjk/backtest/: runner.py
(+204 files in other folders)
