[project]
name = "tjk-scraper"
version = "0.1.0"
description = "Professional TJK Scraper"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "selectolax>=0.3.16",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
